app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener-deployment
  namespace: url-shortener
spec:
  replicas: 3
  selector:
    matchLabels:
      app: url-shortener
  template:
    metadata:
      labels:
        app: url-shortener
    spec:
      containers:
        - name: url-shortener
          image: xilinx19/url-shortener:v3
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: url-shortener-service
  namespace: url-shortener
spec:
  type: NodePort
  selector:
    app: url-shortener
  ports:
    - protocol: TCP
      port: 8080
      nodePort: 30080
