network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgress-network-policy
  namespace: url-shortener
spec:
  podSelector:
    matchLabels:
      app: url-shortener
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: url-shortener
      ports:
        - protocol: TCP
          port: 5432
